fix header layout bug

--- a/src/shared/sass/partials/_header.scss
+++ b/src/shared/sass/partials/_header.scss
@@ -25,38 +25,23 @@
 }
 
 .header-search {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  top: 0;
-  left: 115px;
-  width: calc(100% - 115px);
-  height: 70px;
   border-bottom: 1px solid $white-3;
   background-color: $white-2;
   font-weight: 300;
-  z-index: 2;
-  transition: all 0.3s ease-in-out;
+  height: 70px;
 }
 
 .main-header .search-form {
   position: relative;
   display: flex;
   align-items: center;
+  overflow: hidden;
   width: 100%;
 }
 
 .main-header .search-label {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  -webkit-clip-path: inset(50%);
-  clip-path: inset(50%);
-  border: 0;
+  left: -99999px;
 }
 
 .main-header .submit-button {
@@ -68,6 +53,12 @@
   position: relative;
   height: 100%;
   display: block;
+  width: 40px;
+}
+
+.main-header .button-text {
+  position: absolute;
+  left: -99999px;
 }
 
 .main-header .submit-button::after {
@@ -92,4 +83,5 @@
   font-size: 13px;
   text-transform: uppercase;
   line-height: normal;
+  width: calc(100% - 40px);
 }
